# ocr-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.Dockerfile  env.Dockerfile  package.json  readme.md  run.Dockerfile
.cargo/: config.toml
.cloudbase/container/: debug.json
.github/workflows/: fly.yml
cv_self/: Cargo.toml
cv_self/src/: cv_play.rs  lib.rs
cv_self/src/preprocessing/: mod.rs  pet_info.rs
ocr-test/: a.js  a.txt  b.json  regexp.js
pre-build/: ocr-rust
src/: cv_play.rs  error.rs  main.rs  res.rs
src/controllers/: ocr.rs
src/routes/: mod.rs
src/services/: cv.rs  mod.rs  ocr.rs  tesseract.rs
src/util/: mod.rs  random_str.rs
src/util/props_extractor/: boxfile.rs  mod.rs  pet_info.rs
