[package]
edition = "2021"
name = "ocr-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = {version = "0.6.20", features = ['multipart']}
axum-extra = "0.8.0"
base64-url = "2.0.1"
cv_self = {path = './cv_self'}
opencv = "0.86.1"
rand = "0.8.5"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1"
tokio = {version = "1.34.0", features = ["full"]}

[workspace]
menbers = ['.', 'cv_self']
