[package]
edition = "2021"
name = "ocr-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
base64-url = {workspace = true}
opencv = {workspace = true}
rand = {workspace = true}
regex = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}

[workspace]
menbers = ['.']

[workspace.dependencies]
anyhow = "1.0"
axum = {version = "0.7.2", features = ['multipart']}
axum-extra = "0"
base64-url = "2.0.1"
opencv = "0.86.1"
rand = "0.8.5"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1.0"
tokio = {version = "1.34.0", features = ["full"]}
